--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <version>1.4.2.Final</version>
 <!--            <version>${org.mapstruct.version}</version>-->
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
     <!--	<dependencyManagement>-->
     <!--		<dependencies>-->
